tests/baselines/reference/parserComputedPropertyName9.errors.txt
parserComputedPropertyName9.ts(2,5): error TS2304: Cannot find name 'e'.
parserComputedPropertyName9.ts(2,9): error TS2304: Cannot find name 'Type'.


==== parserComputedPropertyName9.ts (2 errors) ====
    class C {
       [e]: Type
        ~
!!! error TS2304: Cannot find name 'e'.
            ~~~~
!!! error TS2304: Cannot find name 'Type'.
    }